--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@
                 </ul>
             </nav>
             <a href="tel:+79453425555" class="header__tel">+7 945 342 55 55</a>
-            <a href="#" class="header__cart"><span class="header__counter">0</span>
-            </a>
+            <button class="header__cart"><span class="header__counter">0</span>
+            </button>
         </header>
     </div>
 </body>
