--- a/src/index.html
+++ b/src/index.html
@@ -38,24 +38,42 @@
             </button>
         </header>
         <div class="container">
-            <div class="main__text">
-                <h1 class="title title_block">
-                    Здоровая еда &ndash;
-                    <span class="title__span">
-                        это просто!
-                    </span>
-                </h1>
-                <div class="main__item">
-                    <p class="description description_size-s">Сеть магазинов полезных продуктов питания, производство которых основано на&nbsp;принципах и стандартах органического чистых продуктов</p>
-                    <div class="main__link">
-                        <a href="#" class="link">Перейти в каталог</a>
+            <div class="main__flex">
+                <div class="main__text">
+                    <h1 class="title title_block">
+                        Здоровая еда -
+                        <span class="title__span">
+                            это просто!
+                        </span>
+                    </h1>
+                    <div class="main__item">
+                        <p class="description description_size-s">Сеть магазинов полезных продуктов питания, производство которых основано на&nbsp;принципах и стандартах органического чистых продуктов</p>
+                        <div class="main__link">
+                            <a href="#" class="link">Перейти в каталог</a>
+                        </div>
                     </div>
                 </div>
+                <div class="main__cover">
+                    <div class="main__line">
+                        <img class="main__img" src="images/image-main.png" alt="Тарелка со здоровой едой">
+                    </div>
+                    <button class="main__btn main__btn_1" type="button">
+                        <span class="main__food">Авокадо</span> 134 руб
+                    </button>
+                    <button class="main__btn main__btn_2" type="button">
+                        <span class="main__food">Картофель</span> 169 руб
+                    </button>
+                    <button class="main__btn main__btn_3" type="button">
+                        <span class="main__food">Томаты</span> 215 руб
+                    </button>
+                </div>
             </div>
-        </div>
-
-
-        
+            <img src="images/tomato.png" alt="" class="main__tomato"> 
+            <img src="images/pepper.png" alt="" class="main__pepper">
+            <img src="images/avocado.png" alt="" class="main__avocado">
+            <img src="images/cucumber.png" alt="" class="main__cucumber">
+            <img src="images/beans.png" alt="" class="main__beans">
+        </div>    
     </div>
 </body>
 </html>
