--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
     </div>
     <section class="offer">
         <div class="container">
-            <h1 class="title title_block">
+            <h1 class="title title_block offer__title">
                 Что мы
                 <span class="title__span">
                     предлагаем
@@ -141,7 +141,7 @@
     </section>
     <section class="about">
         <div class="container">
-            <h1 class="title title_block">
+            <h1 class="title title_block about__title">
                 В чем наша
                 <span class="title__span">
                     уникальность
@@ -162,7 +162,7 @@
     </section>
     <section class="trends">
         <div class="container">
-            <h1 class="title">
+            <h1 class="title trends__title">
                 Наши
                 <span class="title__span">
                     новинки
@@ -287,6 +287,223 @@
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-pagination"></div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="catalog">
+        <div class="container">
+            <h1 class="title catalog__title">
+               Каталог
+            </h1>
+            <div class="catalog__text">
+                <p class="description description_size-m">Еда которая заботиться о вашей фигуре</p>
+            </div>
+            <ul class="filter catalog__filter">
+                <li class="filter__item">
+                    <a href="#" class="filter__link">Молочные продукты</a>
+                </li>
+                <li class="filter__item">
+                    <a href="#" class="filter__link">Бакалея</a>
+                </li>
+                <li class="filter__item">
+                    <a href="#" class="filter__link">Мясо, птица</a>
+                </li>
+                <li class="filter__item">
+                    <a href="#" class="filter__link">Детям</a>
+                </li>
+                <li class="filter__item">
+                    <a href="#" class="filter__link">Овощи и фрукты</a>
+                </li>
+            </ul>
+            <div class="catalog-grid">
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img src="images/catalog/milk1.png" alt="Топленое молоко" class="catalog-grid__img">
+                    </div>
+                    <h3 class="catalog-grid__title">Молоко топленое</h3>
+                    <p class="catalog-grid__description">Молоко Healthy food топленое мдж 4%	500гр</p>
+                    <p class="catalog-grid__price">159 руб/шт</p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                        <button class="counter__btn counter__btn_size-s counter__minus"></button>
+                        <input class="counter__input counter__input_size-s" type="text" value="0">
+                        <button class="counter__btn counter__btn_size-s counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-s">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img src="images/catalog/yogurt1.png" alt="Йогурт с черникой" class="catalog-grid__img">
+                    </div>
+                    <h3 class="catalog-grid__title">Йогурт с черникой</h3>
+                    <p class="catalog-grid__description">Йогурт Healthy food  с черникой, питьевой 1,5%, 750 г</p>
+                    <p class="catalog-grid__price">89 руб/шт</p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                        <button class="counter__btn counter__btn_size-s counter__minus"></button>
+                        <input class="counter__input counter__input_size-s" type="text" value="0">
+                        <button class="counter__btn counter__btn_size-s counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-s">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img src="images/catalog/curd 1.png" alt="Творог" class="catalog-grid__img">
+                    </div>
+                    <h3 class="catalog-grid__title">Творог</h3>
+                    <p class="catalog-grid__description">Творог Healthy food Рассыпчатый 9% 350 г</p>
+                    <p class="catalog-grid__price">216 руб/шт</p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                        <button class="counter__btn counter__btn_size-s counter__minus"></button>
+                        <input class="counter__input counter__input_size-s" type="text" value="0">
+                        <button class="counter__btn counter__btn_size-s counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-s">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img src="images/catalog/mozarella.png" alt="Моцарелла" class="catalog-grid__img">
+                    </div>
+                    <h3 class="catalog-grid__title">Моцарелла</h3>
+                    <p class="catalog-grid__description">Моцарелла Healthy food  45%, 0.125 кг</p>
+                    <p class="catalog-grid__price">359 руб/шт</p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                        <button class="counter__btn counter__btn_size-s counter__minus"></button>
+                        <input class="counter__input counter__input_size-s" type="text" value="0">
+                        <button class="counter__btn counter__btn_size-s counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-s">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img src="images/catalog/butter.png" alt="Масло сливочное" class="catalog-grid__img">
+                    </div>
+                    <h3 class="catalog-grid__title">Масло сливочное</h3>
+                    <p class="catalog-grid__description">Масло Healthy food  сливочное 82,5%, 200г</p>
+                    <p class="catalog-grid__price">139 руб/шт</p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                        <button class="counter__btn counter__btn_size-s counter__minus"></button>
+                        <input class="counter__input counter__input_size-s" type="text" value="0">
+                        <button class="counter__btn counter__btn_size-s counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-s">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img src="images/catalog/yogurt.png" alt="Йогурт термостатный" class="catalog-grid__img">
+                    </div>
+                    <h3 class="catalog-grid__title">Йогурт термостатный</h3>
+                    <p class="catalog-grid__description">Йогурт Healthy food термостатный с фруктово-ягодным 2,5 %, 165 г</p>
+                    <p class="catalog-grid__price">159 руб/шт</p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                        <button class="counter__btn counter__btn_size-s counter__minus"></button>
+                        <input class="counter__input counter__input_size-s" type="text" value="0">
+                        <button class="counter__btn counter__btn_size-s counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-s">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img src="images/catalog/cheese.png" alt="Сыр" class="catalog-grid__img">
+                    </div>
+                    <h3 class="catalog-grid__title">Сыр</h3>
+                    <p class="catalog-grid__description">Сыр  Healthy food Сливочный 45% 200г</p>
+                    <p class="catalog-grid__price">559 руб/шт</p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                        <button class="counter__btn counter__btn_size-s counter__minus"></button>
+                        <input class="counter__input counter__input_size-s" type="text" value="0">
+                        <button class="counter__btn counter__btn_size-s counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-s">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img src="images/catalog/sauce.png" alt="Соус для салата" class="catalog-grid__img">
+                    </div>
+                    <h3 class="catalog-grid__title">Соус для салата</h3>
+                    <p class="catalog-grid__description">Соус для салата Healthy food пикантыный 4%  70гр</p>
+                    <p class="catalog-grid__price">59 руб/шт</p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                        <button class="counter__btn counter__btn_size-s counter__minus"></button>
+                        <input class="counter__input counter__input_size-s" type="text" value="0">
+                        <button class="counter__btn counter__btn_size-s counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-s">В корзину</a>
+                    </div>
+                </div>
+            </div>
+            <button class="catalog__button">Загрузить ещё</button>
+        </div>
+    </section>
+    <section class="payment">
+        <div class="container">
+            <h1 class="title payment__title">
+                Доставка и 
+                <span class="title__span">
+                    оплата
+                </span>
+            </h1>
+            <div class="payment__box">
+                <div class="payment__part-delivery">
+                    <p class="description description_size-s">Мы доставляем ваши заказы курьером  в специально оборудованном транспорте.</p> 
+                    <p class="description description_size-s">Компания Healthly food предлагает самые удобные и быстрые способы доставки по всей стране. Посмотреть подробные условия и географию вы можете по этой <a class="description__link" href="#">ссылке</a></p>
+                </div>
+                <div class="payment__part-pay">
+                    <p class="description description_size-s">Вы можете оплатить заказ наличными или картой курьеру, либо воспользоваться функцией онлайн-оплаты и получить <span class="description__accent">скидку 5%</span>.</p> 
+                    <ul class="payment__list">
+                        <li class="payment__item">MasterCard</li>
+                        <li class="payment__item">Visa</li>
+                        <li class="payment__item">PayPal</li>
+                    </ul>
+                </div>  
+            </div>
+        </div>
+    </section>
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__box">
+                <div class="contacts__info">
+                    <h1 class="title title_block"> Не смогли
+                        <span class="title__span">
+                            определиться?
+                        </span>
+                    </h1>
+                    <div class="contacts__inner">
+                        <p class="description description_size-s">Если у вас остались вопросы, вы можете задать отправить нам ваши данные. Наши менеджеры свяжутся с вами в течении рабочего дня.</p>
+                        <ul class="contacts__list">
+                            <li class="contacts__item">
+                                <a href="tel:+79453425555" class="contacts__link contacts__link_tel">+7 945 342 55 55</a>
+                            </li>
+                            <li class="contacts__item">
+                                <a href="mailto:healthlyfood@mail.ru" class="contacts__link contacts__link_email">healthlyfood@mail.ru</a>
+                            </li>
+                        </ul>
+                    </div>                   
+                </div>
+                <div class="contacts__form card">
+                    <h3 class="card__title">Свяжитесь с нами</h3>
+                    <form>
+                        <label class="card__label">Ваше имя</label>    
+                        <input type="text" class="card__input" placeholder="Ваше имя">
+                        <label class="card__label">Ваше телефон</label>    
+                        <input type="tel" class="card__input" placeholder="Ваш телефон">
+                        <button type="submit" class="link card__link">Заказать звонок</button>
+                        <p class="card__check">Нажимая на кнопку вы подтверждаете свое согласие на обработку <a href="#" class="card__docs">персональных данных.</a></p>
+                    </form>
+                </div>               
             </div>
         </div>
     </section>
