--- a/src/index.html
+++ b/src/index.html
@@ -531,8 +531,8 @@
                                 <li class="footer__item">сб-вс с 09:00 до 19:00</li>
                             </ul>
                             <div class="footer__contact">
-                                <a href="tel:+79453425555" class="footer__tel">+7 945 342 55 55</a>
-                                <a href="mailto:healthlyfood@mail.ru" class="footer__email">e-mail: healthlyfood@mail.ru</a>
+                                <a href="tel:+79453425555" class="footer__link footer__link_tel">+7 945 342 55 55</a>
+                                <a href="mailto:healthlyfood@mail.ru" class="footer__link">e-mail: healthlyfood@mail.ru</a>
                                 <ul class="footer__social social">
                                     <li class="social__item">
                                         <a href="#" class="social__link social__link_vk"></a>
