--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
             <header class="header">
                 <a href="#" class="logo">
                 </a>
-                <nav>
+                <nav class="header__nav-wrapper">
                     <ul class="header__nav">
                         <li class="header__item">
                             <a href="#" class="header__link">Наша продукция</a>
@@ -508,7 +508,7 @@
                     </div>
                 </div>
             </section>
-            <footer>
+            <footer class="footer__wrapper">
                 <div class="container">
                     <div class="footer__box">
                         <a href="#" class="logo logo_size-m footer__logo">
